@@ -286,7 +286,7 @@ public class GtnWsNsfService {
 	}
 
 	private HelperTable getHelperTable(Integer systemId, Session session) {
-		return session.load(HelperTable.class, systemId == null ? new Integer(0) : systemId);
+		return session.load(HelperTable.class, systemId == null ? Integer.valueOf(0) : systemId);
 	}
 
 	private CdrModel getCdrModel(Integer systemId, Session session) {
